# makefile_cmake_learn

./: .gitignore  CMakeLists.txt  Makefile  README.md
inc/: config.h  math_utils.h  test.h
src/: main.cpp  math_utils.cpp  tcp_udp_echo.c
tests/: test_math.cpp
